commented out unneeded lines

--- a/lab_5/index.html
+++ b/lab_5/index.html
@@ -285,7 +285,7 @@
     sessionStorage.setItem("json_countries", JSON.stringify(countries)); /* Question 1*/
     /* start of the Q2-9 */
     /*document.getElementsByClassName("button").onclick = ;*/
-    document.getElementsByClassName("content").innerHTML = "Hello";
+    /*document.getElementsByClassName("content").innerHTML = "Hello";*/
 
     function replace_countries(){
       const count_arr = sessionStorage.getItem("json_countries");
