Changed while loop
While loop logic changed to for loop

--- a/lab_5/index.html
+++ b/lab_5/index.html
@@ -284,23 +284,22 @@
     /*console.log(Object.keys(countries));*/
     sessionStorage.setItem("json_countries", JSON.stringify(countries)); /* Question 1*/
     /* start of the Q2-9 */
-    /*document.getElementsByClassName("button").onclick = ;*/
-    /*document.getElementsByClassName("content").innerHTML = "Hello";*/
 
     function replace_countries(){
       const count_arr = sessionStorage.getItem("json_countries");
-      let list_1 = JSON.parse(count_arr);
+      const list_1 = JSON.parse(count_arr);
       /*console.log("AAHAHAHAHAHA");*/
 
-      let i = 0;
+      let i;
       let items = document.getElementsByClassName("instructions");
       let new_list = document.createElement('ol'); /* making a new ordered list*/
 
       /* this loop limits the list to 50 items */
-
-      while (i < 50){
+      /* i += 0 since I don't want the array to increment unless a valid
+         non-duplicate country was added */
+      for (i = 0; i < 50; i += 0){
             let item = document.createElement('li'); /* list contents */
-            let arr = []; /* empty array to store random index values */
+            let arr = [];                            /* empty array to store random index values */
 
             let z = Math.floor((Math.random() * 243)); /* getting random index */
 
@@ -310,7 +309,7 @@
                   item.innerHTML = temp2;
                   new_list.appendChild(item); /* adding country name to ol */
                   arr[i] = z
-                  i += 1; 
+                  i += 1; /* manual increment */
             }
            
       }
