--- a/lab_6_ajax copy/index.html
+++ b/lab_6_ajax copy/index.html
@@ -19,33 +19,33 @@
   function replace(arg){
     /* first just display 15 countries to test */
     let i;
-    let arr = "";
+    const arr = document.querySelector('.content');
+    arr.innerHTML = "";
     let temp = [];
-    let new_list = document.createElement('ol');
-    /* getting 15 countries */
+    /* getting 15 random countries */
     for (i = 0; i < 15; i += 0){
       let item = document.createElement('li');
       let z = Math.floor((Math.random() * 243));
       if (temp.includes(z) === false){
-        /*let name = arg[i];
-        item.innerHTML = name;
-        new_list.append(name);
-        temp[i] = z;*/
-        arr += '<li>' + arg[i] + '<li>';
+        item.innerText = arg[z];
+        temp[i] = z; 
+        console.log(item);
+        arr.appendChild(item);
         i += 1;
       }
     }
-    /*arr[0].innerHTML = "";
-    arr[0].appendChild(new_list);*/
+    /*console.log(arr);*/
     return arr;
   }  
     function loadData() {
       fetch('ajax_sample.json')
         .then(res => res.json())
         .then(res => res.map(c => c.name)) /* gets an array of country names */
-        .then(res => replace(res))
+        /*.then(res => replace(res))*/
         /* loads the content on the page */
-        .then(codes => document.querySelector(".content").innerText = codes);
+        .then(codes => replace(codes));
+        /*.then(codes => replace(codes));*/
+        /*console.log(typeof codes);*/
     }
   </script>
 </body>
